...
      "comment": "The Desktop folder in the picker's Locations",
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Desktop"
          }
        },
        "ar": {
          "stringUnit": {
            "state": "needs_review",
            "value": "سطح المكتب"
...
