...
            "value": "Neue Maschine"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "New Machine"
          }
        },
        "es": {
          "stringUnit": {
            "state": "needs_review",
            "value": "Nueva máquina"
...
